--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.10"
+    "react-native": "0.70.10",
+    "react-native-image-picker": "^5.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
